CHANGES IN VERSION 2.15.1
-------------------------
 o Fix type (see https://github.com/sneumann/mzR/pull/162)

CHANGES IN VERSION 2.15.0
-------------------------
 o New Bioc devel version

CHANGES IN VERSION 2.13.8
-------------------------
 o Document missing chrom argument for chromatogram(s)

CHANGES IN VERSION 2.13.7
-------------------------
 o Add a missing header needed on gcc 6.2.0

CHANGES IN VERSION 2.13.6
-------------------------
 o Add MS CV Term IDs for mzR, MSnbase and CAMERA (issue #151)
 o Validate exported mzML files using xsd

CHANGES IN VERSION 2.13.5
-------------------------
 o Fix https://github.com/sneumann/xcms/issues/261
 o Fix endian.hpp for new c++ versions (see PR #149)

CHANGES IN VERSION 2.13.4
-------------------------
 o Fix error (see issue #145)

CHANGES IN VERSION 2.13.3
-------------------------
 o Link against Rhdf5lib, allows to read mz5 also on Windows
 o Use Rhdf5lib 1.1.4 with c++ headers in /include
 o fix BiocStyle related issue in Vignette on Windows
 
CHANGES IN VERSION 2.13.2
--------------------------
 o Add chromatogramHeader method to read header information for chromatograms
   from an mzML file.

CHANGES IN VERSION 2.13.1
--------------------------
 o Read filter string from mzML files and add it to the data.frame returned by
   the header function (see MSnbase issue #278).
 o openMsFile automatically determine the backend to use based on file extension
   and content.
 
CHANGES IN VERSION 2.11.11
--------------------------
 o Fix problem in writeMSData: ensure precursor data is saved even if precursor
   scan is not available (see MSnbase issue #245).
 
CHANGES IN VERSION 2.11.10
--------------------------
 o Fix problem that can cause a SEGFAULT in writeMSData/copyWriteMSData when MS
   data with spectra linking to missing precursor scans is saved (issue #129).

CHANGES IN VERSION 2.11.9
-------------------------
 o Update peaks man page with details about spectrumId, acquisitionNum
   and seqNum
